--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <script src = "lib/stats.js"></script>
   <script src = "lib/TextCreator.js"></script>
   <script src = "lib/ObjectControls.js"></script>
+  <script src = "lib/PointerLockControls.js"></script>
 
   <script src="postprocessing/EffectComposer.js"></script>
   <script src="postprocessing/ConvolutionShader.js"></script>
@@ -30,6 +31,7 @@
   
   <script src = "js/constants.js"></script>
   <script src = "js/forest.js"></script>
+  <script src = "js/controls.js"></script>
   <script src = "js/main.js"></script>
 
  <link rel="stylesheet" type="text/css" href="css/styles.css">
