--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
   <script src = "js/constants.js"></script>
   <script src = "js/forest.js"></script>
   <script src = "js/controls.js"></script>
+  <script src = "js/orb.js"></script>
   <script src = "js/main.js"></script>
 
  <link rel="stylesheet" type="text/css" href="css/styles.css">
