--- a/index.html
+++ b/index.html
@@ -33,9 +33,11 @@
   <script src = "js/forest.js"></script>
   <script src = "js/controls.js"></script>
   <script src = "js/orb.js"></script>
-  <script src = "js/pillars.js"></script>
+  <script src = "js/Canvas.js"></script>
   <script src = "js/main.js"></script>
 
  <link rel="stylesheet" type="text/css" href="css/styles.css">
+
+ <div id = "wand"></div>
   
 </body>
