--- a/client/index.html
+++ b/client/index.html
@@ -37,5 +37,7 @@
  <link rel="stylesheet" type="text/css" href="css/styles.css">
 
  <div id = "wand"></div>
+
+ <div id="pings"></div>
   
 </body>
