--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
   <script src = "js/constants.js"></script>
   <script src = "js/controls.js"></script>
   <script src = "js/Canvas.js"></script>
+  <script src = "js/Attractor.js"></script>
+  <script src = "js/PaintManager.js"></script>
   <script src = "js/main.js"></script>
 
  <link rel="stylesheet" type="text/css" href="css/styles.css">
